2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local) [ENABLE_TESTS]: Don't define target in
	this case.  Fix spelling.
	(md5sum): Generate the md5 hash of the binary we include, not the
	original binary.
	(modules.h): Depend on $(files).  Provide a default priority and
	weight.
	($(files)): Don't depend on modules.S.
	(CLEANFILES): New variable.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (main): Fix mask when extracting hexadecimal
	digits.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local): New target.
	(hieronymus.striped): Likewise.
	($(addsuffix .S, $(files))): Set BINARY to the binary's name.
	($(files)): New target.
	($(addsuffix .o, $(files))): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c: Include <md5.h>.
	(struct module): Add field md5sum.
	(main): Calculate the md5 digest for the binary.  Compare it to
	the hash calculated at compile time.  If they don't match, panic.
	* Makefile.am (md5sum): New function.
	(tovar): New function.
	(modules.h): Use it.  Generate an md5 digest for the binary.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (struct module): Add field delay.
	(do_gather_stats): Don't initialize EPOCH here...
	(main): ... but here.  After loading all the modules, free the
	memory.  Start the modules according to their respective delay
	parameters.
	* Makefile.am (modules.h): Generate the delay parameter.
	
	(module_paths): Add benchmarks.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (do_gather_stats): Change to use activity_info
	instead of activity_stats.

	(main): Introduce code to delay process creation.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c: Include <stdlib.h>.
	(module_count): Make a global static.
	(activities): Likewise.
	(all_done): New variable.
	(now): New function.
	(epoch): Likewise.
	(struct stat): New structure.
	(stats_count): New variable.
	(stats): Likewise.