@@ -1,3 +1,11 @@
+2008-07-08  Neal H. Walfield  <neal@gnu.org>
+
+	* process-spawn.c (process_spawn): Don't add an extra trailing NUL
+	to the argment vector or the environment vector.
+
+	* ia32-cmain.c (finish): Assume the command line is in argz
+	format and parse it appropriately.
+
 2008-07-04  Neal H. Walfield  <neal@gnu.org>
 
 	* _exit.c (_exit): Print a backtrace.
